--- a/css/bg_default.css
+++ b/css/bg_default.css
@@ -1,6 +1,6 @@
 
 html {
-	background: url(../img/bg/7.pg) no-repeat center center fixed;
+	background: url(../img/noon.jpg) no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
