--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ html {
     font-family: sans-serif;
 }
 body{
-  background: url(../img/diagmonds.png);
+  background: url(../img/noon.jpg);
   background-repeat: repeat;
   color:#6C6662;
   font:14px/20px 'PT Sans','Helvetica Neue','Arial','Helvetica',sans-serif; 
