--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ body{
   background: url(../img/noon.png);
   background-repeat: no-repeat;
   background-attachment: fixed;
+  background-size: cover;
   background-position: bottom right;
   color:#6C6662;
   font:14px/20px 'PT Sans','Helvetica Neue','Arial','Helvetica',sans-serif; 
