--- a/css/styles.css
+++ b/css/styles.css
@@ -15,8 +15,8 @@ body{
   background: url(../img/noon.png);
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-size: contain;
-  /*background-position: bottom right;*/
+  /*background-size: contain;*/
+  background-position: center;*/
   color:#6C6662;
   font:14px/20px 'PT Sans','Helvetica Neue','Arial','Helvetica',sans-serif; 
 }
